adjusted the images to be the same size and aligned the text verticaly, also fixed the margin

--- a/src/index.css
+++ b/src/index.css
@@ -420,6 +420,9 @@ nav {
     margin: 5%;
   }
 }
+.quickLooks {
+  background-color: #042C4F;
+}
 .top-sect {
   max-width: 100%;
 }
@@ -433,32 +436,39 @@ nav {
   display: flex;
   max-width: 100%;
   margin-bottom: 3%;
+  margin-right: 10%;
+  align-items: center;
 }
 .sect .img {
   width: 70%;
+  display: flex;
+  justify-content: center;
 }
 .sect .img img {
   border-radius: 999px;
-  width: 90%;
-  height: 60vh;
+  width: 70%;
+  height: 70vh;
 }
 .second-sect {
   display: flex;
   max-width: 100%;
   margin-bottom: 3%;
+  margin-left: 10%;
+  align-items: center;
 }
 .second-sect .img {
+  display: flex;
+  justify-content: center;
   width: 70%;
 }
 .second-sect .img img {
   border-radius: 999px;
   width: 70%;
-  margin-left: 10%;
   height: 70vh;
 }
 .paragraph {
   width: 40%;
-  margin-top: 6%;
+  margin-top: 0%;
 }
 .paragraph h2 {
   font-size: 2.5rem;
