--- a/src/less/landing.less
+++ b/src/less/landing.less
@@ -1,3 +1,6 @@
+.quickLooks{
+background-color: #042C4F;
+}
 .top-sect{
     max-width: 100%;
         img{
@@ -12,14 +15,18 @@
 display: flex;
 max-width: 100%;
 margin-bottom: 3%;
+margin-right: 10%;
+align-items: center;
 }
 
 .sect .img{
     width: 70%;
+    display: flex;
+    justify-content: center;
         img{
             border-radius: 999px;
-            width: 90%;
-            height:60vh;
+            width: 70%;
+            height:70vh;
         }
 }
 
@@ -27,20 +34,23 @@ margin-bottom: 3%;
     display: flex;
     max-width: 100%;
     margin-bottom: 3%;
+    margin-left: 10%;
+    align-items: center;
         .img{
+            display: flex;
+            justify-content: center;
             width: 70%;
                 img{
                     border-radius: 999px;
                     width: 70%;
-                    margin-left: 10%;
-                    height:70vh;             
+                    height:70vh;    
                 }    
         }
 }
 
 .paragraph{
     width: 40%;
-    margin-top: 6%;
+    margin-top: 0%;
         h2{
             font-size: 2.5rem;
         }
